<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.framgia.feastival.screen.login.LoginViewModel"/>

        <import type="android.view.View"/>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_50"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dp_20"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp_10"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_phone_or_email"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@={viewModel.account}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_pass_word"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@={viewModel.password}"/>
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/title_remember_me"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_gradient"
                android:gravity="center"
                android:onClick="@{() -> viewModel.onLoginClick()}"
                android:padding="@dimen/dp_10"
                android:text="@string/title_login"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onRegisterClick()}"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/title_register"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textStyle="italic|bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/title_slash"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textStyle="italic|bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onForgotPassWordClick()}"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/action_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textStyle="italic|bold"/>

            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.login ? View.VISIBLE : View.GONE}"/>
    </RelativeLayout>
</layout>